<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222121"
    tools:context=".builderDesignPattern.RegisterClientActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarId"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:text="@string/user_name"
        android:textColor="@color/light_gray" />
    <EditText
        android:id="@+id/usernameEditTextId"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/textfield_style"
        android:ems="5"
        android:fontFamily="serif"
        android:hint="@string/user_name"
        android:paddingStart="10dp"
        android:textColor="@color/light_blue"
        android:textColorHint="@color/light_gray"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameEditTextId"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/email"
        android:textColor="@color/light_gray" />
    <EditText
        android:id="@+id/emailEditTextId"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/textfield_style"
        android:ems="5"
        android:fontFamily="serif"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:textColor="@color/light_blue"
        android:textColorHint="@color/light_gray"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailEditTextId"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/phone"
        android:textColor="@color/light_gray" />
    <EditText
        android:id="@+id/phoneEditTextId"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/textfield_style"
        android:ems="5"
        android:fontFamily="serif"
        android:hint="@string/_880"
        android:paddingStart="10dp"
        android:textColor="@color/light_blue"
        android:textColorHint="@color/light_gray"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneEditTextId"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/password"
        android:textColor="@color/light_gray" />
    <EditText
        android:id="@+id/passEditTextId"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/textfield_style"
        android:ems="5"
        android:fontFamily="serif"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textColor="@color/light_blue"
        android:textColorHint="@color/light_gray"
        android:textSize="12sp" />

    <Button
        android:id="@+id/signUpButtonId"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/passEditTextId"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_style"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/light_green"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpButtonId"
        android:layout_alignParentStart="true"
        android:layout_marginStart="110dp"
        android:layout_marginTop="150dp"
        android:text="@string/already_have_account"
        android:textColor="@color/light_green" />

    <TextView
        android:id="@+id/signInTextId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpButtonId"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="109dp"
        android:layout_toEndOf="@+id/textView5"
        android:text="@string/sign_in"
        android:textColor="@color/light_blue" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarId"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary" />


</RelativeLayout>

